// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea should render correctly 1`] = `
.c0 {
  word-wrap: break-word;
  resize: none;
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #97a4ba;
  outline: none;
  background-color: #ffffff;
  color: #283040;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  height: auto;
  -webkit-transition: border 0.2s ease;
  transition: border 0.2s ease;
}

.c0:hover {
  border-color: #328ef5;
}

.c0:focus {
  border-color: #328ef5;
  box-shadow: inset 0 0 0 2px #eef1f8;
}

.c0:disabled,
.c0 [disabled] {
  border-color: #97a4ba;
  background-color: #c4cfdd;
  color: #67758d;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: #97a4ba;
}

.c0::-moz-placeholder {
  color: #97a4ba;
}

.c0:-ms-input-placeholder {
  color: #97a4ba;
}

.c0::placeholder {
  color: #97a4ba;
}

<textarea
  class="c0"
  placeholder="placeholder"
  rows="1"
  style="overflow-x: hidden; word-wrap: break-word; overflow-y: hidden;"
/>
`;

exports[`Textarea should render correctly with minRows & maxRows 1`] = `
.c0 {
  word-wrap: break-word;
  resize: none;
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #97a4ba;
  outline: none;
  background-color: #ffffff;
  color: #283040;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  height: auto;
  -webkit-transition: border 0.2s ease;
  transition: border 0.2s ease;
}

.c0:hover {
  border-color: #328ef5;
}

.c0:focus {
  border-color: #328ef5;
  box-shadow: inset 0 0 0 2px #eef1f8;
}

.c0:disabled,
.c0 [disabled] {
  border-color: #97a4ba;
  background-color: #c4cfdd;
  color: #67758d;
  cursor: not-allowed;
}

.c0::-webkit-input-placeholder {
  color: #97a4ba;
}

.c0::-moz-placeholder {
  color: #97a4ba;
}

.c0:-ms-input-placeholder {
  color: #97a4ba;
}

.c0::placeholder {
  color: #97a4ba;
}

<textarea
  class="c0"
  id="demo"
  placeholder="placeholder"
  rows="3"
/>
`;
